tests/NormalTests/paczka1/fuzzy1/45000472.err
Error in line 10: 5jzrEaj A729 17,2
Error in line 14: MSFCVb A729 80,5
Error in line 16: S356 S356 81,5
Error in line 18: 5jzrEaj S303 25,6
Error in line 19: MSFCVb S356 49,6
Error in line 33: MyIkJpSa0S S356 -1,6
Error in line 27: kah0dX S179 46,2
Error in line 30: 1OCEOXXCs4N S179 53,7
